# hls_cnn

./: HW_CNN.cpp  README.md  calculateLayer2.cpp  calculateLayer2.h  calculateLayer2_tb.cpp  calculateLayer3.cpp  calculateLayer3.h  calculateLayer3_tb.cpp  calculateLayer4.cpp  calculateLayer4.h  calculateLayer4_tb.cpp  cnn_lenet.cpp  cnn_lenet.h  cnn_lenet_tb.cpp  input_data.h  lenet5.h  lenet_hw_tb.cpp  sigmoid.cpp  sigmoid.h  sigmoidLUT.txt  sigmoid_table.m
CNN_lenet5/: .cproject  .project  .vitis_hls_log_all.xml  cnn_hls.lnk  hls.app
CNN_lenet5/.apc/: autopilot.apfmapping
CNN_lenet5/solution1/: csim.tcl  csynth.tcl  directives.tcl  script.tcl  solution1.aps  solution1.directive  solution1_data.json
CNN_lenet5/solution10/: script.tcl  solution10.aps  solution10.directive  solution10_data.json
CNN_lenet5/solution2/: script.tcl  solution2.aps  solution2_data.json
CNN_lenet5/solution3/: directives.tcl  script.tcl  solution3.aps  solution3.directive  solution3_data.json
CNN_lenet5/solution4/: script.tcl  solution4.aps  solution4_data.json
CNN_lenet5/solution5/: directives.tcl  script.tcl  solution5.aps  solution5.directive  solution5_data.json
CNN_lenet5/solution6/: script.tcl  solution6.aps  solution6_data.json
CNN_lenet5/solution7/: script.tcl  solution7.aps  solution7.directive  solution7_data.json
CNN_lenet5/solution8/: script.tcl  solution8.aps  (+1 more)
vitis-codesign/: .peers.ini  .repo.yaml  .vitisWorkspace.json
vitis-codesign/cnn_codesign_platform/zynq_fsbl/zynq_fsbl_bsp/hw_artifacts/drivers/cnn_lenet_v1_0/src/: CMakeLists.txt  xcnn_lenet.c
(+2115 files in other folders)
